[package]
name = "eip712"
version = "0.1.0"
authors = ["Seun LanLege <seunlanlege@gmail.com>"]

[dependencies]
serde_derive = "1.0.79"
serde = "1.0.79"
serde_json = "1.0.28"
ethabi = "6.0.1"
keccak-hash = "0.1.2"
ethereum-types = "0.4.0"
hex = "0.3.2"
failure = "0.1.2"
itertools="0.7"
failure_derive = "0.1.2"
lazy_static = "1.1.0"

[dev-dependencies]
hex = "0.3.2"
