[package]
name = "eip712"
version = "0.1.0"
authors = ["Seun LanLege <seunlanlege@gmail.com>"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
ethabi = "6.0"
keccak-hash = "0.1"
ethereum-types = "0.4"
hex = "0.3"
failure = "0.1"
itertools="0.7"
failure_derive = "0.1"
lazy_static = "1.1"
valico = "2.2"
[dev-dependencies]
hex = "0.3"
